lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:30: error: ')' expected but '<-' found.
  		} else if (getVitesseX()<-0.1) {
                                        ^Lander:36: error: ';' expected but ')' found.
  		if (getVitesseY()<(-9)) {
                                      ^