lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize() {
  	
  }

  override def step() {
  	var liste= getSol()
  	var debut = new Array[Double](2)
  	var fin = new Array[Double](2)
  	for (i<- 0 to liste.length-2) {
  		
  		if (liste(i).y==liste(i+1).y) {
  			debut(0)=liste(i).x
  			debut(1)=liste(i).y
  			fin(0)=liste(i+1).x
  			fin(1)=liste(i+1).y
  		}
  	}
  	if (getX>fin(0)) {
  		setAngleDesire(20)
  		setPousseeDesiree(4)	
  	} 
  	if (getX<debut(0)) {
  		setAngleDesire(-20)
  		setPousseeDesiree(4)
  	}
  	if ((getX>=debut(0)) && (getX<=fin(0))) {
  		if (getVitesseX()>0.1){
  			setAngleDesire(20)
  			setPousseeDesiree(4)
  		} else if (getVitesseX()<-0.1) {
  			setAngleDesire((-20))
  			setPousseeDesiree(4)
  		} else {
  			setAngleDesire(0)
  		}
  		if (getVitesseY()<(-9)) {
			setPousseeDesiree(4)	
		} else {
			setPousseeDesiree(0)
		}
  	}
  }
